--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
         </div>
         
     </div>
-    <div class="paralax">
+    <div class="copy">
         <div class="conteudo container">
             <div class="container row d-flex" style="align-items: center; padding-top: 1rem;">
                 <div class="col-12 col-md-8 ">
                     <p style="color: rgba(0, 0, 0, 0.541);">A FEW WORDS ABOUT ME</p>
-                    <h4 style="font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans'" class="copy">I’m Joao Carlos, a Front-end developer who focuses on telling my clients’ stories visually, through enjoyable and meaningful experiences. I specialize in responsive websites and functional user interfaces.</h4>
+                    <h4 style=" font-weight: 400;font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans'" class="copy">Welcome to my page.</br> I'm Joao Carlos Dene. A Front-end developer who focuses on telling my clients’ stories visually, through enjoyable and meaningful experiences. I specialize in responsive websites and functional user interfaces.</h4>
                     <p style="color: rgba(0, 0, 0, 0.541);font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans'; font-weight: 300;">Over the past 2 years I have been working and study so hard improving my capacity to bring to my clients the best experience possible. Welcome to my page.</p>
                     <p>View Projects or Read About Me</p>                    
                 </div>
@@ -64,6 +64,7 @@
                     <p><i class="fas fa-check"></i> SHOPIFY</p>
                 </div>
             </div>
+        </div>
     </div>
     <div class="bloco text-center container">
         <div class="container text-center">
@@ -124,5 +125,64 @@
             </a>
           </div>
         </div>
+    <div class="container">
+        <div class="reason " style="padding:1rem;">
+            <h3 class="text-center" style="padding-bottom: 2rem;">Top 10 Benefits of Having a Website</h3>
+            <div class="container row d-flex justify-content-center">
+                <div class="col-12 col-md-2">
+                    <p>1°Online Presence 24/7</p>
+                    <p>2°Information Exchange</p>
+                    <p>3°Credibility</p>
+                    <p>4°It Cuts Costs</p>
+                    <p>5°Market Expansion</p>
+                </div>
+                <div class="col-12 col-md-2">
+                    <p>6°Consumer Insights</p>
+                    <p>7°Advertising</p>
+                    <p>8°Competitors Online</p>
+                    <p>9°Customer Service Online</p>
+                    <p>10°Growth Opportunity</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container need text-center">
+        <p>NEED A WEBSITE?</p>
+        <h1>Let's Work Together,</br> Let's Make Something Special! </br><i class="fas fa-long-arrow-alt-right"></i></h1>
+    </div>
+    <div class="footer container">
+        <div class="row container">
+            <div class="col-12 col-md-4">
+                <h4>Contact
+                    information —</h4>
+                <p>Feel free to reach out to me any time. I prefer to talk over email, especially since we may be a few time zones away.</p>
+                <p>Email: joaoo.c@hotmail.com</p>
+                <p>Phone: +55 019 994668213</p>
+            </div>
+            <div class="col-12 col-md-3 text-center">
+                <h4>Follow Me:</h4>
+                <p><i class="fab fa-instagram"> Instagram</i></p>
+                <p><i class="fab fa-facebook-f"> Facebook</i></p>
+                <p><i class="fab fa-linkedin-in"> LinkDIN</i></p>
+                <p><i class="fab fa-github"> GitHub</i></p>
+            </div>
+            <div class="col-12 col-md-3">
+                <h4>Current
+                    availability —</h4>
+                <p>I usually work on several projects but I’ll be happy to discuss new opportunities. Let’s get in touch!</p>
+            </div>
+            <div class="col-12 col-md-2 text-end" style="margin-top: 2rem;">
+                <a href="#">HOME</br></a>
+                <a href="#">ABOUT ME</br></a>
+                <a href="#">PROJECTS</br></a>
+                <a href="#">CONTACT</br></a>
+            </div>
+        </div>
+    </div>
+    <div class="copyright" style="background-color: black;color: whitesmoke;padding: 2rem;">
+        <div class="developer text-center">
+            <p><i class="far fa-copyright"></i> 2022 Joao Carlos Dene</p>
+        </div>
+    </div>
 </body>
 </html>
