finalizando home page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container container-fluid ">
-                            <a class="navbar-brand" href="#"><img class="logo" style="width: 230px;" src="images/minhalogo-branco.png" alt=""></a>
+                            <a class="navbar-brand" href="#"><img class="logo" style="height: 80px;" src="images/logo-pronto.png" alt=""></a>
                             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                                 <span class="navbar-toggler-icon"></span>
                               </button>
@@ -28,7 +28,7 @@
                                       PROJECTS
                                     </a>
                                     <ul class="dropdown-menu text-center" style="font-size: 0.8rem;" aria-labelledby="navbarDropdownMenuLink">
-                                      <li><a class="dropdown-item" href="servicos/consultoria.html">CONSULTORIA</a></li>
+                                      <li><a class="dropdown-item" href="servicos/consultoria.html">E-COMMERCE</a></li>
                                       <li><a class="dropdown-item" href="servicos/financiamento.html">FINANCIAMENTO</a></li>
                                       <li><a class="dropdown-item" href="servicos/contabilidade.html">CONTABILIDADE</a></li>
                                       <li><a class="dropdown-item" href="servicos/recursos-humanos.html">RECURSOS HUMANOS</a></li>
@@ -54,7 +54,7 @@
                 <div class="col-12 col-md-8 ">
                     <p style="color: rgba(0, 0, 0, 0.541);">A FEW WORDS ABOUT ME</p>
                     <h4 style=" font-weight: 400;font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans'" class="copy">Welcome to my page.</br> I'm Joao Carlos Dene. A Front-end developer who focuses on telling my clients’ stories visually, through enjoyable and meaningful experiences. I specialize in responsive websites and functional user interfaces.</h4>
-                    <p style="color: rgba(0, 0, 0, 0.541);font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans'; font-weight: 300;">Over the past 2 years I have been working and study so hard improving my capacity to bring to my clients the best experience possible. Welcome to my page.</p>
+                    <p style="color: rgba(0, 0, 0, 0.541);font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans'; font-weight: 300;">Over the past 2 years I have been working and study so hard improving my capacity to bring to my clients the best experience possible.</p>
                     <p>View Projects or Read About Me</p>                    
                 </div>
                 <div class="col-12 col-md-4">
